force-app/main/default/objects/User_Group_Association__c/User_Group_Association__c.object-meta.xml
<CustomObject>
    <label>User Group Association</label>
    <nameField>
        <displayFormat>UGA{00000}</displayFormat>
        <label>User Group Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Group Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>