force-app/main/default/objects/User_Group_Association__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Group Associations</relationshipLabel>
    <relationshipName>User_Group_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>